# habitat_ros

./: .gitignore  CMakeLists.txt  Readme.md  package.xml  setup.py
config/: Readme.md  VLP_16.yaml  VLP_16_test.yaml  camera.yaml  depth_camera.yaml  fake_camera.yaml  hokuyo.yaml  mybot.yaml  oreo.yaml  realsense.yaml  rgbcam.yaml  semantic_camera.yaml  sick_laser.yaml
launch/: default_robot.launch  depth_camera.launch  habitat_ros.launch  habitat_sim.launch  navigation.launch  oreo.launch  oreo_sim.launch  point_cloud_xyzrgb.launch  sim_with_head.launch
msg/: LiDARINFO.msg
robot/mybot/: model.glb  mybot.object_config.json
robot/oreo/: oreo.object_config.json
rviz/: example.rviz
script/: control.py  experiemtn.py  img2clip.py  move_agent.py  move_agent_test.py  robot.py  sensors.py  sim.py  sim_old.py  simulator.py  viewer.py
script/habitat_ros/: controllable_object.py  robot.py  transformation.py  utils.py
script/habitat_ros/sensors/: __init__.py  sensor.py
script/habitat_ros/sensors/cameras/: camera.py  depth_camera.py  rgb_camera.py  semantic_camera.py
script/habitat_ros/sensors/lidar/: laser.py  lidar.py
src/: range_to_laserscan.cpp  range_to_pointcloud.cpp
