<?xml version="1.0"?>
<package format="2">
  <name>habitat_ros</name>
  <version>0.1.0</version>
  <description>The habitat robot package</description>
  <maintainer email="fumincha763@gmail.com">Brian</maintainer>
  <maintainer email="todo@no.com">Ariel</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msg</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
